--- a/Lab2-19/Views/MainWindow.xaml
+++ b/Lab2-19/Views/MainWindow.xaml
@@ -6,30 +6,55 @@
         xmlns:local="clr-namespace:Lab2_19"
         xmlns:vm="clr-namespace:Lab2_19.ViiwModel"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Window.DataContext >
+        Title="MainWindow" Height="600" Width="800">
+    <Window.Resources>
+        <SolidColorBrush x:Key="ColorNumber" Color="#FFFFDE96" />
+        <SolidColorBrush x:Key="ColorFunc" Color="#FFB9B3A6" />
+
+        <Style TargetType="Button">
+            <Setter Property="FontSize" Value="35"/>
+            <Setter Property="Margin" Value="3"/>
+        </Style>
+       
+
+    </Window.Resources>
+    <Window.DataContext>
         <vm:MainWindowViewModel  />
     </Window.DataContext>
-    <TabControl >
-        <TabItem Header="Сложение">
-            <StackPanel>
-                <TextBox Text="{Binding Path=Number1}"/>
-                <TextBox Text="{Binding Path=Number2}"/>
-                <Button  Content="Сумма" Command="{Binding Path=AddCommand}"/>
-                <TextBox  Text="{Binding Path=NumberSum}"/>
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+        <TextBox Text="{Binding Path=ParseString, UpdateSourceTrigger=PropertyChanged}" Grid.Row="0" Grid.Column="0" FontSize="48" FontWeight="Bold" TextAlignment="Right" Padding="3" Margin="3" Background="#FFCFF0F5"  />
+        <TextBlock Text="{Binding Path=NumberResult}" Grid.Row="1" Grid.Column="0" FontSize="48" FontWeight="Bold" TextAlignment="Right" Padding="3" Margin="3" Background="#FFCFF0F5"/>
+        <UniformGrid Grid.Row="2" Grid.Column="0" Rows="5" Columns="4" >
 
-            </StackPanel>
-        </TabItem>
-        <TabItem Header="Длина окружности по радиусу">
-            <StackPanel>
-                <TextBox Text="{Binding Path=Radius}"/>
-               
-                <Button  Content="Длинна окружности" Command="{Binding Path=LenFromRadiusCommand}"/>
-                <TextBox  Text="{Binding Path=LenCricle}"/>
+            <Button Content="x²" Background="{StaticResource ColorFunc}" Command="{Binding KvadCommand}" />
+            <Button Content="CE" Background="{StaticResource ColorFunc}" Command="{Binding ClearAllCommand}"/>
+            <Button Content="←"  Background="{StaticResource ColorFunc}" Command="{Binding ClearSymbolCommand }" />
+            <Button Content="÷"  Background="{StaticResource ColorFunc}" Command="{Binding ButtonCommand }" CommandParameter="/" />
+            <Button Content="7"  Background="{StaticResource ColorNumber}" Command="{Binding ButtonCommand }" CommandParameter="7" />
+            <Button Content="8"  Background="{StaticResource ColorNumber}" Command="{Binding ButtonCommand }" CommandParameter="8" />
+            <Button Content="9"  Background="{StaticResource ColorNumber}" Command="{Binding ButtonCommand }" CommandParameter="9" />
+            <Button Content="*" Background="{StaticResource ColorFunc}" Command="{Binding ButtonCommand }" CommandParameter="*" />
+            <Button Content="4"  Background="{StaticResource ColorNumber}" Command="{Binding ButtonCommand }" CommandParameter="4" />
+            <Button Content="5"  Background="{StaticResource ColorNumber}" Command="{Binding ButtonCommand }" CommandParameter="5" />
+            <Button Content="6"  Background="{StaticResource ColorNumber}" Command="{Binding ButtonCommand }" CommandParameter="6" />
+            <Button Content="-"  Background="{StaticResource ColorFunc}" Command="{Binding ButtonCommand }" CommandParameter="-" />
+            <Button Content="1" Background="{StaticResource ColorNumber}" Command="{Binding ButtonCommand }" CommandParameter="1" />
+            <Button Content="2"  Background="{StaticResource ColorNumber}" Command="{Binding ButtonCommand }" CommandParameter="2" />
+            <Button Content="3"  Background="{StaticResource ColorNumber}" Command="{Binding ButtonCommand }" CommandParameter="3"  />
+            <Button Content="+"  Background="{StaticResource ColorFunc}" Command="{Binding ButtonCommand }" CommandParameter="+" />
+            <Button Content="00"   Background="{StaticResource ColorNumber}" Command="{Binding ButtonCommand }" CommandParameter="00" />
+            <Button Content="0"  Background="{StaticResource ColorNumber}" Command="{Binding ButtonCommand }" CommandParameter="0" />
+            <Button Content=","   Background="{StaticResource ColorFunc}" Command="{Binding ButtonCommand }" CommandParameter="." />
+            <Button Content="="   Background="{StaticResource ColorFunc}"  Command="{Binding CalcCommand}"/>
 
-           
-            </StackPanel>
-        </TabItem>
-    </TabControl>
+
+        </UniformGrid>
+
+    </Grid>
 
 </Window>
